# FAIRmodels-backend

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  reminder.md  requirements.txt
.github/workflows/: build.yaml
FAIRmodels_backend/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_variablelink_field_model_var_dim_end_and_more.py  0002_fairmodelversion_model_type.py  0003_alter_fairmodel_created_at_and_more.py  0003_remove_variablelink_unique_appversion_and_more.py
backend/api/: admin.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
executor/: services.py  urls.py  views.py
executor/templates/: base.html  executor.html  index.html
fairmodels_backend/: Dockerfile  data_layer.py  data_manager.py  main.py  server.py
fairmodels_backend/routers/: __init__.py  auth.py  model.py
metadata/templates/metadata/: index.html
