[tool.poetry]
name = "fairmodels-backend"
version = "0.1.0"
description = ""
authors = ["eensander <50321538+eensander@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fairmodels_backend"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
