[tool.poetry]
name = "fairmodels-backend"
version = "0.1.0"
description = ""
authors = ["eensander <50321538+eensander@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fairmodels_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
